add cloud-init support
